--- a/bang5tao.html
+++ b/bang5tao.html
@@ -388,7 +388,13 @@
 		<div id="leftfour">
 			<div id="xb"><img src="img/consult-s.png" alt="">
 				<img id="xbzixun" src="img/xiaobang.png" alt=""></div>
-			<div id="youhui"><img src="img/youhui.png" alt=""></div>
+			<div id="youhui">
+				<img src="img/youhui.png" alt="">
+				<div id="yhload">
+					<p>未登录</p>
+					<input type="button" value="登陆">
+				</div>
+			</div>
 			<div id="app">
 				<img src="img/app.png" alt="">
 				<img src="img/serwei.png" alt="" id="app1">
@@ -517,15 +523,21 @@
 		var xb = document.getElementById("xb");
 		var youhui = document.getElementById("youhui");
 		var app = document.getElementById("app");
+		var app1 = document.getElementById("app1");
+		var app2 = document.getElementById("app2");
 		var cart = document.getElementById("cart");
+		var yhload = document.getElementById("yhload");
 
 		cart.onmouseenter = function(){
 			leftmove(cart,{right:0});
 		}
 		app.onmouseenter = function(){
+			app1.style.display = "none";
+			app2.style.display = "inline";
 			leftmove(app,{right:0});
 		}
 		youhui.onmouseenter = function(){
+			yhload.style.display = "inline";
 			leftmove(youhui,{right:0});
 		}
 		xb.onmouseenter = function(){
@@ -537,11 +549,12 @@
 			leftmove(cart,{right:-85});
 		}
 		app.onmouseleave = function(){
-			
+			app1.style.display = "inline";
+			app2.style.display = "none";
 			leftmove(app,{right:-85});
 		}
 		youhui.onmouseleave = function(){
-
+			yhload.style.display = "none";
 			leftmove(youhui,{right:-85});
 		}
 		xb.onmouseleave = function(){
